# Haskell-Implementation-of-Tiger-Compiler

./: Decisiones.txt  HaskTiger.cabal  README.md  compile.sh  runtime.c  stack.yaml  versions
.stack-work/ghci/10557a98/: cabal_macros.h
.stack-work/ghci/641c1c2e/: cabal_macros.h
.stack-work/ghci/8cdb5c57/: cabal_macros.h
.stack-work/ghci/df08cd1e/: cabal_macros.h
.stack-work/ghci/fd1946a1/: cabal_macros.h
.stack-work/install/x86_64-linux/38e4f4a35e23846516c6d1f9fa295e246e53b0d461b0cd4ee051d2d8a5280c32/8.4.3/lib/x86_64-linux-ghc-8.4.3/HaskTiger-0.1.0.0-E6JtQm9Zg0wBS3ktoDWbKX/: Manticore.dyn_hi  Manticore.hi  State.dyn_hi  State.hi  TigerAbs.dyn_hi  TigerAbs.hi  TigerCanon.dyn_hi  TigerCanon.hi  TigerErrores.dyn_hi  TigerErrores.hi  TigerEscap.dyn_hi  TigerEscap.hi  TigerFrame.dyn_hi  TigerFrame.hi  TigerLexer.dyn_hi  TigerLexer.hi  TigerParser.dyn_hi  TigerParser.hi  TigerPretty.dyn_hi  TigerPretty.hi  TigerPrettyIr.dyn_hi  TigerPrettyIr.hi  TigerQQ.dyn_hi  TigerQQ.hi  TigerSeman.dyn_hi  TigerSeman.hi  TigerSres.dyn_hi  TigerSres.hi  TigerSymbol.dyn_hi  TigerSymbol.hi  TigerTemp.dyn_hi  TigerTemp.hi  TigerTips.dyn_hi  TigerTips.hi  TigerTopSort.dyn_hi  TigerTopSort.hi  TigerTrans.dyn_hi  TigerTrans.hi  TigerTree.dyn_hi  TigerTree.hi  (+2 more)
.stack-work/install/x86_64-linux/3f80d55a2733212adbd64489eb7e6c5402aba02024c499297820d2ef45287ae6/8.4.3/lib/x86_64-linux-ghc-8.4.3/HaskTiger-0.1.0.0-EXpy6btH6xKFnTs1TmodmL/: MonadsInstances.dyn_hi  MonadsInstances.hi  State.dyn_hi  State.hi  TigerAbs.dyn_hi  TigerAbs.hi  TigerAssem.dyn_hi  TigerAssem.hi  TigerCanon.dyn_hi  TigerCanon.hi  TigerColor.dyn_hi  TigerColor.hi  TigerErrores.dyn_hi  TigerErrores.hi  TigerEscap.dyn_hi  TigerEscap.hi  TigerFrame.dyn_hi  TigerFrame.hi  TigerLexer.dyn_hi  TigerLexer.hi  TigerLiveness.dyn_hi  TigerLiveness.hi  TigerMakeGraph.dyn_hi  TigerMakeGraph.hi  TigerMunch.dyn_hi  TigerMunch.hi  TigerParser.dyn_hi  TigerParser.hi  TigerPretty.dyn_hi  TigerPretty.hi  TigerPrettyIr.dyn_hi  TigerPrettyIr.hi  TigerQQ.dyn_hi  TigerQQ.hi  TigerSeman.dyn_hi  TigerSeman.hi  TigerSres.dyn_hi  TigerSres.hi  TigerSymbol.dyn_hi  TigerSymbol.hi  (+12 more)
.stack-work/install/x86_64-linux/3f80d55a2733212adbd64489eb7e6c5402aba02024c499297820d2ef45287ae6/8.4.3/lib/x86_64-linux-ghc-8.4.3/HaskTiger-0.1.0.0-GM9D2YZvJLgGToH9iQRpuK/: MonadsInstances.dyn_hi  MonadsInstances.hi  TigerAssem.dyn_hi  TigerAssem.hi  TigerColor.dyn_hi  TigerColor.hi  TigerEscap.dyn_hi  TigerFrame.dyn_hi  TigerFrame.hi  TigerLexer.hi  TigerLiveness.dyn_hi  TigerLiveness.hi  TigerMakeGraph.dyn_hi  TigerMakeGraph.hi  TigerMunch.dyn_hi  TigerMunch.hi  TigerParser.hi  TigerPretty.dyn_hi  TigerPrettyIr.dyn_hi  TigerPrettyIr.hi  TigerQQ.dyn_hi  TigerSeman.dyn_hi  TigerSeman.hi  TigerSres.dyn_hi  TigerSres.hi  TigerTemp.dyn_hi  TigerTemp.hi  TigerTips.dyn_hi  TigerTopSort.dyn_hi  TigerTopSort.hi  TigerTrans.dyn_hi  TigerTrans.hi  TigerTree.hi  TigerUnique.hi
.stack-work/install/x86_64-linux/4d7528e28e3f4d5c6a3b6253d478bdd02b8a5b53f8e5dc2ebdf76ea9092476ed/8.4.3/lib/x86_64-linux-ghc-8.4.3/HaskTiger-0.1.0.0-4kRirklQ9QVCQhFz5nbtpI/: MonadsInstances.dyn_hi  MonadsInstances.hi  State.dyn_hi  State.hi  TigerAbs.dyn_hi  TigerAbs.hi  TigerCanon.dyn_hi  TigerCanon.hi  TigerErrores.dyn_hi  TigerErrores.hi  TigerEscap.dyn_hi  TigerEscap.hi  TigerFrame.dyn_hi  TigerFrame.hi  TigerLexer.dyn_hi  TigerLexer.hi  TigerParser.dyn_hi  TigerParser.hi  TigerPretty.dyn_hi  TigerPretty.hi  TigerPrettyIr.dyn_hi  TigerPrettyIr.hi  TigerQQ.dyn_hi  TigerQQ.hi  TigerSeman.dyn_hi  TigerSeman.hi  TigerSres.dyn_hi  (+15 more)
.stack-work/install/x86_64-linux/5905ceea6e90148a01c3b53720abed57c7d5f81e8f0b5dae09b66f9f6e60aef1/8.4.3/pkgdb/: HaskTiger-0.1.0.0-9B3n97lXx05IVUrGHBbUAW.conf  package.cache
app/: Stages.hs  TigerMain.hs
doc/: Decisiones.txt  Dudas.txt
interp/: TigerInterpFrame.hs  TigerInterpPP.hs
output/: .dot  compare-record-and-nil.s  compare-record-and-nil2.s  fact.s  for.s  merge.s  merge2.s  merge3.s  multiple-args.s  multiple-breaks.s  nested-loops.s  queens.s  recursive-comments.s  recursive-lets.s  recursive-types.s  runtime.c  runtime.s  test01.s  test02.s  test03.s  test06.s  test07.s  test08.s  test12.s  test27.s  test30.s  test37.s  test42.s  test44.s  test47.s  test48.s  test49.s  testifs.s  three-name-spaces.s
output/exec/: a.out  compare-record-and-nil  compare-record-and-nil2  fact  for  local-vs-global-type  merge  merge2  merge3  multiple-args  multiple-breaks  nested-loops  queens  recursive-comments  recursive-lets  recursive-types  test01  test02  test03  test06  test07  test08  test12  test27  test30  test37  test42  test44  test47  test48  test49  testifs  three-name-spaces
src/: CommentsTopSort.hs  Manticore.hs  MonadsInstances.hs  State.hs  TigerAbs.hs  TigerAssem.hs  TigerCanon.hs  TigerColor.hs  TigerErrores.hs  TigerEscap.hs  TigerFrame.hs  TigerLiveness.hs  TigerMakeGraph.hs  TigerMunch.hs  TigerPretty.hs  TigerPrettyIr.hs  TigerSeman.hs  TigerSemanComments.hs  TigerSres.hs  TigerSymbol.hs  TigerTemp.hs  TigerTips.hs  TigerTopSort.hs  TigerTrans.hs  TigerTree.hs  TigerUnique.hs
src/Comments/: CommentsSeman.hs  CommentsTigerAbs.hs  CommentsTigerEscap.hs  CommentsTigerFrame.hs  CommentsTigerTrans.hs
test/: Canon.hs  Escap.hs  EscapTesting.hs  InstrSelect.hs  Intermediate.hs  Liveness.hs  Parser.hs  RegAlloc.hs  Seman.hs  Spec.hs  Tools.hs  Trans.hs
test/FG/: .dot  compare-record-and-nil.dot  compare-record-and-nil2.dot  fact.dot  merge.dot  multiple-args.dot  multiple-breaks.dot  nested-loops.dot  queens.dot  recursive-comments.dot  recursive-lets.dot  recursive-types.dot  test01.dot  test03.dot  test06.dot  test07.dot  test08.dot  test12.dot  test27.dot  test30.dot  test37.dot  test42.dot  test44.dot  test47.dot  test48.dot  test49.dot  testifs.dot  three-name-spaces.dot
test/test_code/good/: compare-record-and-nil2.tig  for.tig  merge2.tig  merge3.tig  multiple-args.tig  multiple-breaks.tig  nested-loops.tig  queens.tig  recursive-lets.tig  test01.tig  test06.tig  test08.tig  test42.tig  test49.tig  test50.tig  testifs.tig
test/test_code/type/: test38.tig
(+447 files in other folders)
