name:                HaskTiger
version:             0.1.0.0
homepage:            https://git.dcc.fceia.unr.edu.ar/Compiladores
license:             BSD3
license-file:        LICENSE
author:              Martincito
maintainer:          martin@dcc.fceia.unr.edu.ar
copyright:           2018 Lcc
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src, interp, test
--  other-modules: State
  other-modules: Tools
  exposed-modules:
      -- Primer entrega
          MonadsInstances
        , State
        , TigerAbs
        , TigerAssem
        , TigerCanon
        , TigerColor
        , TigerErrores
        , TigerEscap
        , TigerFrame
        , TigerLexer
        , TigerLiveness
        , TigerMakeGraph
        , TigerMunch
        , TigerParser
        , TigerPretty
        , TigerPrettyIr
        , TigerQQ
        , TigerSeman
        , TigerSres
        , TigerSymbol
        , TigerTemp
        , TigerTips
        , TigerTopSort
        , TigerTrans
        , TigerTree
        , TigerUnique
        , EscapTesting
        -- Experimental
        -- , TigerInterpPP
        -- , TigerInteractive
        -- , TigerInterpTypes
        -- , TigerInterpFrame
  build-depends:       algebraic-graphs
                       , ansi-terminal
                       , base
                       , cond
                       , containers
                       , directory
                       , matrix
                       , monad-loops
                       , mtl
                       , parsec
                       , pretty
                       , text
                       , transformers
                       -- QuasiQuoting things
                       , syb
                       , template-haskell
                       , Stack
  default-language:    Haskell2010
  default-extensions: DeriveDataTypeable
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , PatternSynonyms
                    , TupleSections
                    , TypeFamilies
                    , TypeSynonymInstances
                    , UndecidableInstances

executable HaskTiger
  hs-source-dirs:      app
  main-is:             TigerMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , cond
                       , containers
                       , mtl
                       , parsec
                       , pretty
                       , text
                       , transformers
                       , HaskTiger
  default-language:    Haskell2010

test-suite Parser
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Parser.hs
  build-depends:       ansi-terminal
                     , base
                     , directory
                     , parsec
                     , text
                     , HaskTiger
  other-modules: Tools
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Escap
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             EscapTesting.hs
  build-depends:       ansi-terminal 
                     , base
                     , directory
                     , parsec
                     , text
                     , HaskTiger
  other-modules: Tools
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: QuasiQuotes

test-suite Seman
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Seman.hs
  build-depends:       ansi-terminal
                     , base
                     , directory
                     , parsec
                     , text
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Intermediate
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Intermediate.hs
  build-depends:       ansi-terminal
                     , base
                     , directory
                     , parsec
                     , text
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Canon
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Canon.hs
  build-depends:       ansi-terminal
                     , base
                     , directory
                     , parsec
                     , text
                     , transformers
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite InstrSelect
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             InstrSelect.hs
  build-depends:       ansi-terminal
                     , base
                     , directory
                     , parsec
                     , text
                     , transformers
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Liveness
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Liveness.hs
  build-depends:       ansi-terminal
                     , base
                     , containers
                     , directory
                     , graphviz
                     , parsec
                     , text
                     , transformers
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite RegAlloc
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             RegAlloc.hs
  build-depends:       ansi-terminal
                     , base
                     , containers
                     , directory
                     , mtl
                     , parsec
                     , text
                     , transformers
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010



-- test-suite Interp
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Interp.hs
--  build-depends:       base
--                     , parsec
--                     , directory
--                     , ansi-terminal
--                     , containers
--                     , cond
--                    , HaskTiger
--  other-modules: Tools
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.dcc.fceia.unr.edu.ar/Compiladores/TigerHaskell
